Drop MaxPermSize